# Ros-D4nc3r

./: LICENSE  README.md
D4NC3R TEST/: platformio.ini
D4NC3R TEST/lib/motor_controle/: motor_controle.cpp  motor_controle.h  pid_rpm.cpp  pid_rpm.h
D4NC3R TEST/lib/ros2/: encoder_comun.cpp  motor_comun.cpp  ros2.cpp  ros2.h
D4NC3R TEST/src/: main.cpp
d4nc3r_base/: CMakeLists.txt  d4nc3r_hw.xml  package.xml
d4nc3r_base/applications/: motor_driver_demo.cpp
d4nc3r_base/include/d4nc3r_base/: diffdrive_d4nc3r.h  motor_driver.h  wheel.h
d4nc3r_base/src/: CMakeLists.txt  diffdrive_d4nc3r.cpp  motor_driver.cpp  wheel.cpp
d4nc3r_control/: CMakeLists.txt  package.xml
d4nc3r_control/config/: d4nc3r_controllers.yaml
d4nc3r_control/include/d4nc3r_control/: d4nc3r_hardware_interface.hpp
d4nc3r_control/launch/: d4nc3r_control.launch.py
d4nc3r_control/rviz/: rviz.rviz
d4nc3r_control/src/: d4nc3r_hardware_interface.cpp  d4nc3r_hardware_interface_plugin.xml
d4nc3r_description/: CMakeLists.txt  package.xml
d4nc3r_description/config/d4nc3r/: hardware.yaml  wheel.yaml
d4nc3r_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
d4nc3r_description/launch/: d4nc3r_description.launch.py  gz_d4nc3r.launch.py  view_d4nc3r.launch.py
d4nc3r_description/log/: latest_build
d4nc3r_description/meshes/d4nc3r/: chassis.stl  chassis_top.stl
d4nc3r_description/urdf/: d4nc3r.urdf.xacro
d4nc3r_description/urdf/include/: common_macros.urdf.xacro  d4nc3r_caster_macro.urdf.xacro  d4nc3r_control.urdf.xacro
d4nc3r_gz/: CMakeLists.txt  package.xml
d4nc3r_gz/launch/: d4nc3r_one_robot.launch.py  d4nc3r_turtle.launch.py  spawn_robot.launch.py
d4nc3r_gz/urdf/: d4nc3r_gz.xacro
d4nc3r_handler/: CMakeLists.txt  package.xml
d4nc3r_handler/config/: ekf.yaml
d4nc3r_handler/config/d4nc3r/: base.yaml  caster_wheel.yaml  motor.yaml  second_base.yaml  wheel.yaml
d4nc3r_handler/launch/: d4nc3r_handler.launch.py  d4nc3r_yolo.launch.py
d4nc3r_handler/src/: yolo_to_twist.cpp
d4nc3r_handler/urdf/: d4nc3r.urdf.xacro
d4nc3r_handler/urdf/include/: common_macros.urdf.xacro  d4nc3r_caster_macro.urdf.xacro  d4nc3r_control.urdf.xacro
d4nc3r_msg/: CMakeLists.txt  package.xml
d4nc3r_navigation/: CMakeLists.txt  package.xml
d4nc3r_navigation/launch/: bringup.launch.py
d4nc3r_spawner/: CMakeLists.txt  package.xml
d4nc3r_spawner/launch/: d4nc3r_spawner.launch.py
d4nc3r_teleop/: CMakeLists.txt  package.xml
d4nc3r_teleop/launch/: teleop_joystick.launch.py  teleop_keyboard.launch.py
esp32/: platformio.ini
esp32/lib/display/: display.cpp  display.h
esp32/lib/encoder/: encoder.cpp  encoder.h
esp32/lib/motor_controle/: motor_controle.cpp  motor_controle.h  motor_controle_old.cpp
esp32/lib/mpu6050/: mpu6050.cpp  mpu6050.h
esp32/lib/odometry/: odometry.cpp
esp32/lib/ros2/: display_comun.cpp  led_comun.cpp  motor_comun.cpp  mp3_comun.cpp  mpu6050_comun.cpp  ros2.cpp  ros2.h
esp32/src/: main.cpp
