<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>d4nc3r_control</name>
  <version>0.1.0</version>
  <description>The d4nc3r_control package</description>

  <author email="rinaldo.filho.095@ufrn.edu.com">Rinaldo T.S Filho</author>
  <maintainer email="rinaldo.filho.095@ufrn.edu.com">Rinaldo T.S Filho</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>d4nc3r_description</exec_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/d4nc3r_hardware_interface_plugin.xml"/>
  </export>
</package>
