<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>d4nc3r_description</name>
  <version>0.1.0</version>
  <description>The d4nc3r_description package</description>

  <author email="rinaldo.filho.095@ufrn.edu.com">Rinaldo T.S Filho</author>
  <maintainer email="rinaldo.filho.095@ufrn.edu.com">Rinaldo T.S Filho</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
