<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>d4nc3r_handler</name>
  <version>0.1.0</version>
  <description>Contém arquivos de teleoperação o d4nc3r.</description>

  <author email="rinaldo.filho.095@ufrn.edu.com">Rinaldo T.S Filho</author>
  <maintainer email="rinaldo.filho.095@ufrn.edu.com">Rinaldo T.S Filho</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_localization</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>